Fixed wrapping of task lists

--- a/src/main/typescript/src/app/board/board.component.css
+++ b/src/main/typescript/src/app/board/board.component.css
@@ -10,6 +10,10 @@
   background-color: #f7f8fb;
 }
 
+.cards {
+  flex-wrap: nowrap !important;
+}
+
 .profile-image {
   width: 3rem;
   height: 3rem;
